--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,10 +36,10 @@ jobs:
               go-version: "1.23.0"
         
           - name: Check formatting
-            run: test -z $(go fmt ./...)
+            run: test -z "$(go fmt ./...)"
 
           - name: Install staticcheck
             run: go install honnef.co/go/tools/cmd/staticcheck@latest
 
           - name: Linting using staticcheck
-            run: test -z $(staticcheck ./...)
+            run: test -z "$(staticcheck ./...)"
